fix: Updated outdated tests for company, rating, customer